# fantastic-fishstick

./: .gitignore  README.md  config.py  config.yml  fishstick.py  golden.py  pyproject.toml  requirements.txt  retrieve.py
docs/: bollinger_bands.md
src/: config.py  fishstick.py
test/: test_config.py
